--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   provider: ^6.0.2
   firebase_core: ^1.12.0
   firebase_auth: ^3.3.7
+  cloud_firestore: ^3.1.8
+  firebase_storage: ^10.2.7
   google_maps_flutter: ^2.1.2
   location: ^4.3.0
 
