--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,11 @@ dependencies:
   cloud_firestore: ^3.1.8
   firebase_storage: ^10.2.7
   google_maps_flutter: ^2.1.2
+  permission_handler: ^9.2.0
   location: ^4.3.0
+  geolocator: ^8.2.0
+  flutter_polyline_points: ^1.0.0
+
 
 dependency_overrides:
   firebase_auth_platform_interface: 6.1.11
