--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,10 +50,14 @@ dependencies:
   location: ^4.3.0
   geolocator: ^8.2.0
   flutter_polyline_points: ^1.0.0
+  path_provider: ^2.0.9
+  screenshot: ^1.2.3
+  image_gallery_saver: ^1.7.1
 
 
 dependency_overrides:
   firebase_auth_platform_interface: 6.1.11
+  cloud_firestore_platform_interface: 5.4.13
 
 
 dev_dependencies:
