--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
 dependency_overrides:
   firebase_auth_platform_interface: 6.1.11
   cloud_firestore_platform_interface: 5.4.13
+  firebase_storage_platform_interface: 4.0.14
 
 
 dev_dependencies:
